--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,115 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&family=Nunito:wght@200;400;700&display=swap');
+
+ *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Nunito", sans-serif;
+ }
+
+ .nav-bar{
+    height: 78px;
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 4rem;
+ }
+.nav-bar a{
+    text-decoration: none;
+    color: white;
+}
+ .nav-bar h2{
+    font-size: 40px;
+ }
+
+ .nav-bag{
+    display: flex;
+    align-items: center;
+ }
+
+ .bag-quantity{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 25px;
+    width: 25px;
+    background-color: yellow;
+    border-radius: 50%;
+    font-size: 14px;
+    font-weight: 700;
+    color: black;
+    margin-left: 5px;
+ }
+
+ .public-container{
+    padding: 2rem 4rem;
+ }
+
+ .public-container h2{
+    font-size: 40px;
+    font-weight: 400;
+    text-align: center;
+ }
+
+ .products{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+ }
+
+ .product{
+    width: 250px;
+    max-width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 1rem auto;
+    padding: 1rem;
+    border-radius: 15px;
+    box-shadow: -5px -5px 10px rgba(225, 225, 225, 0.5), 2px 2px 5px rgba(94, 104, 121, 0.3);
+ }
+
+ .product img{
+    width: 80%;
+    margin-top: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    
+ }
+
+ .product h3{
+    font-size: 25px;
+    font-weight: 400;
+ }
+
+ .product .details{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ }
+
+ .product .details .price{
+    font-size: 20px;
+    font-weight: 700;
+ }
+
+ .product button{
+    width: 100%;
+    height: 48px;
+    border-radius: 5px;
+    margin-top: 2rem;
+    font-weight: 400;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: #4b70e2;
+    color: white;
+    letter-spacing: 1.15px;
+ }
