--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -125,3 +125,99 @@
     color: white;
     letter-spacing: 1.15px;
  }
+
+.cart-container{
+    padding: 2rem 4rem;
+}
+
+.cart-container h2{
+    font-weight: 400;
+    font-size: 30px;
+    text-align: center;
+}
+
+.cart-container .titles{
+    margin: 2rem 0 1rem 0;
+}
+
+.cart-container .titles h3{
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.cart-item, .cart-container .titles{
+    display: grid;
+    align-items: center;
+    grid-template-columns: 3fr 1fr 1fr 1fr;
+    column-gap: 0.5rem
+}
+
+.cart-item{
+    border-top: 1px solid rgb(187,187,187);
+    padding: 1rem 0;
+}
+
+.cart-container .titles .product-title{
+    padding-left: 0.5rem;
+}
+
+.cart-container .titles .total{
+    padding-right: 0.5rem;
+    justify-self: right;
+}
+
+.cart-item .cart-product{
+    display: flex;
+}
+
+.cart-item .cart-product img{
+    width: 100px;
+    max-width: 100%;
+    margin-right: 1rem;
+}
+
+.cart-item .cart-product h3{
+    font-weight: 400;
+}
+
+.cart-item .cart-product button{
+    border: none;
+    outline: none;
+    margin-top: 0.7rem;
+    cursor: pointer;
+    background: none;
+    color: gray;
+}
+
+.cart-item .cart-product button:hover{
+    color: black;
+}
+
+.cart-product-quantity{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    width: 130px;
+    max-width: 100%;
+    border: 0.5px solid rgb(177, 177, 177);
+    border-radius: 5px;
+}
+
+.cart-product-quantity  button{
+    border: none;
+    outline: none;
+    background: none;
+    padding: 0.7rem 1.5rem;
+    cursor: pointer;
+}
+
+.cart-product-quantity .count{
+    padding: 0.7rem 0;
+}
+
+/* .cart-product-total-price{
+    justify-self: right;
+    padding-right: 0.5rem;
+    font-weight: 700;
+} */
