successfully created and styled cart

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -216,8 +216,92 @@
     padding: 0.7rem 0;
 }
 
-/* .cart-product-total-price{
-    justify-self: right;
-    padding-right: 0.5rem;
+.cart-product-total-price{
+    /* justify-self: right; */
+    /* padding-right: 0.5rem; */
     font-weight: 700;
-} */
+}
+
+.cart-summary{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    border-top: 1px solid rgb(187,187,187);
+    padding-top: 2rem;
+
+}
+
+.cart-summary .clear-cart{
+    width: 130px;
+    max-width: 100%;
+    height: 48px;
+    border-radius: 5px;
+    font-weight: 400;
+    letter-spacing: 1.15px;
+    border: 0.5px solid rgb(177, 177, 177);
+    color: gray;
+    background: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.cart-checkout{
+    width: 270px;
+    max-width: 100%;
+}
+
+.cart-checkout .subtotal{
+    display: flex;
+    justify-content: space-between;
+    font-size: 20px;
+}
+
+.cart-checkout .subtotal .amount{
+    font-weight: 700;
+}
+
+.cart-checkout p{
+    font-size: 14px;
+    font-weight: 200;
+    margin: 0.5rem 0;
+}
+
+.cart-checkout button{
+    width: 100%;
+    height: 48px;
+    border-radius: 5px;
+    font-weight: 400;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: #4b70e2;
+    color: white;
+    letter-spacing: 1.15px;
+}
+
+.continue-shopping,
+.start-shopping{
+    margin-top: 1rem;
+}
+
+.continue-shopping a,
+.start-shopping a {
+    color: gray;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+
+.continue-shopping a span,
+.start-shopping a span {
+    margin-left: 0.5rem;
+}
+
+.cart-empty{
+    font-size: 20px;
+    margin-top: 2rem;
+    color: rgb(84,84,84);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
