--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,15 +21,26 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "Nunito", sans-serif;
+    /* background-color: white; */
  }
-
- .nav-bar{
-    height: 78px;
-    background-color: black;
+ .header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 4rem;
+    height: 196px;
+    padding-bottom: 4rem;
+ }
+
+ .header a{
+    text-decoration: none;
+ }
+ .nav-bar{
+    height: 78px;
+    background-color: orange;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* padding: auto; */
  }
 .nav-bar a{
     text-decoration: none;
@@ -39,9 +50,41 @@
     font-size: 40px;
  }
 
+ .nav-bar h3{
+    padding: 0 1rem 0 1rem;
+    border-radius: 7px;
+    transition: .3s;
+ }
+
+ .nav-bar h3:hover{
+    background-color: #7ed957;
+    font-size:medium;
+
+ }
+
  .nav-bag{
     display: flex;
     align-items: center;
+    color: #7ed957;
+    padding-top: 4.65rem;
+    /* text-decoration: none; */
+    transition: .3s;
+    
+    padding: 1rem 1rem 1rem 1rem;
+    border-radius: 500px;
+ }
+
+ .nav-bag:hover{
+    background-color: #7ed957;
+    color: orange
+ }
+
+ .offical-logo{
+    height: 260px;
+    width: 260px;
+ }
+ .nav-bag a{
+    text-decoration: none;
  }
 
  .bag-quantity{
@@ -50,13 +93,17 @@
     justify-content: center;
     height: 25px;
     width: 25px;
-    background-color: yellow;
+    background-color: orange;
     border-radius: 50%;
     font-size: 14px;
     font-weight: 700;
     color: black;
     margin-left: 5px;
  }
+ 
+.bag-quantity a{
+    text-decoration: none;
+}
 
  .public-container{
     padding: 2rem 4rem;
@@ -121,9 +168,15 @@
     border: none;
     outline: none;
     cursor: pointer;
-    background: #4b70e2;
+    background: #7ed957;
     color: white;
     letter-spacing: 1.15px;
+    transition: .3s;
+ }
+
+ .product button:hover{
+    background-color: #59ce28;
+    /* color: orange */
  }
 
 .cart-container{
@@ -191,7 +244,7 @@
 }
 
 .cart-item .cart-product button:hover{
-    color: black;
+    color: red;
 }
 
 .cart-product-quantity{
@@ -243,6 +296,12 @@
     background: none;
     outline: none;
     cursor: pointer;
+    transition: .3s;
+}
+
+.cart-summary .clear-cart:hover{
+    background-color: red;
+    color: #7ed957
 }
 
 .cart-checkout{
@@ -274,9 +333,14 @@
     border: none;
     outline: none;
     cursor: pointer;
-    background: #4b70e2;
+    background: #59ce28;
     color: white;
     letter-spacing: 1.15px;
+    transition: .3s;
+}
+
+.cart-checkout button:hover{
+    background-color: #7ed957;
 }
 
 .continue-shopping,
@@ -290,6 +354,13 @@
     text-decoration: none;
     display: flex;
     align-items: center;
+    transition: .2s;
+}
+
+
+.continue-shopping a:hover,
+.start-shopping a:hover {
+    color: orange;
 }
 
 .continue-shopping a span,
