--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,11 +17,14 @@
  @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200&family=Nunito:wght@200;400;700&display=swap');
 
  *{
+
+        
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: "Nunito", sans-serif;
     /* background-color: white; */
+    
  }
  .header{
     display: flex;
@@ -107,6 +110,7 @@
 
  .public-container{
     padding: 2rem 4rem;
+
  }
 
  .public-container h2{
@@ -122,6 +126,7 @@
     margin-top: 2rem;
     min-height: 35rem;
     border-bottom: 1px solid rgb(187, 187, 187);
+
  }
 
  .product{
@@ -505,18 +510,26 @@
     text-align: center;
     padding: 2% 10% 0 10%;
     font-size: larger;
+    margin-bottom: 10rem;
 }
 
 .about-content h3{
     padding-top: 1rem;
 }
 
-
+#page-container{
+    position: relative;
+        min-height: 100vh;
+}
 #contact{
     background-color: orange;
     height: 10rem;
     border-top: 1px solid rgb(187, 187, 187);
     padding-top: 1rem;
+    position: absolute;
+        bottom: 0;
+        width: 100%;
+        /* height: 2.5rem; */
 }
 
 .contact-header{
