--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -673,7 +673,8 @@ input{
 }
 
 .admin-page{
-    padding: 1rem 2rem 0 2rem
+    padding: 1rem 2rem 0 2rem;
+    
 }
 
 .admin-header{
@@ -725,14 +726,66 @@ input{
 
  .orders-list{
     overflow: scroll;
-    background-color: red;
+    overflow-x: hidden;
+    margin-top: 1rem;
+    /* background-color: red; */
+    height: 60vh;
  }
 
  .orders-list ul{
-    padding-top: 2rem;
+    /* padding-top: 5rem; */
     list-style-type: none;
+    /* background-color: red; */
  }
 
  .orders-list li{
     padding-bottom: 1rem;
+    /* margin-top: 1rem; */
+    /* padding-top: 5rem ; */
+    /* background-color: orange; */
+ }
+
+ .orders-list h4{
+    padding-top: 0.5rem;
+ 
+ }
+ .order-item{
+    /* background-color: orange; */
+    display: flex;
+    justify-content: space-between;
+    /* margin-top: 1rem; */
+    border-bottom: solid;
+    border-width: thin;
+ }
+
+ 
+ .order-options{
+    /* background-color: green; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 10%;
+    padding: 2rem 0 2rem 0;
+    /* flex-direction: column; */
+ }
+
+ .order-options button{
+    height: 5vh;
+    font-size: large;
+    border-style: solid ;
+    border-width: thin;
+    background-color: white;
+ }
+ .accept-order + .decline-order{
+    transition: .3s;
+ }
+
+ .accept-order:hover{
+    background-color: #59ce28;
+    color: white
+ }
+
+ .decline-order:hover{
+    background-color: red;
+    color:white;
  }
